# wolfie-space

./: .gitignore  README.md
src/: main.py  pyproject.toml
src/html/: home.html
src/static/css/: main.css
