[project]
name = "wolfie-space"
version = "0.0.1"
description = "Personal site"
authors = [
    {name = "Aylawoo", email = "luckaylawoo@gmail.com"},
]
dependencies = [
    "sanic[ext]>=23.12.1",
    "jinja2>=3.1.4",
    "setuptools>=70.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
